kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recommendation-system
  labels:
    name: recommendation-system
